--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start:expo": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "start:server": "node index.js",
-    "dev:server": "node --watch index.js",
-    "dev": "concurrently \" npm run dev:server\" \" npx run expo start\" "
+    "start": "cd api && npm run start",
+    "build": "cd api && npm install",
+    "server": "cd api && npm run server",
+    "dev:front": "npx expo start -c --offline",
+    "dev": "run-s dev:front server",
+    "dev:on": "node start-dev.js",
+    "dev: both": "concurrently \"npx expo start -c\" \"wait-on http://localhost:8081 && npm run start:server\""
   },
   "jest": {
     "preset": "jest-expo"
@@ -26,6 +30,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "expo": "~51.0.28",
@@ -65,8 +70,10 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "npm-run-all": "^4.1.5",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "wait-on": "^8.0.1"
   },
   "private": true,
   "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
